[package]
name = "ss-rng"
version = "0.1.0"
authors = ["lepelog <lepelog4@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [profile.dev]
# panic = "abort"

# [profile.release]
# panic = "abort"

[dependencies]
num-traits = "0.2"
num-derive = "0.4"
lru = "0.10"
serde = { version = "1.0.166", features = ["derive"] }
