[package]
name = "thrill-digger-wasm"
version = "0.1.0"
authors = ["lepelog <lepelog4@gmail.com>"]
edition = "2021"

[package.metadata.wasm-pack.profile.release]
# until it stops crashing
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.78"
ss-rng = {path = "../../thrill-digger-lib"}
num-traits = "0.2"
num-derive = "0.3"

[profile.release]
lto = true
