[package]
name = "thrill-digger-wasm"
version = "0.1.0"
authors = ["lepelog <lepelog4@gmail.com>"]
edition = "2021"

[package.metadata.wasm-pack.profile.release]
# disable again if it crashes
wasm-opt = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.89"
ss-rng = {path = "../../thrill-digger-lib"}
num-traits = "0.2"
num-derive = "0.4"

[profile.release]
lto = true
