[package]
name = "thrill-digger-wasm"
version = "0.1.0"
authors = ["lepelog <lepelog4@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.78"
ss-rng = {path = "../../../thrill-digger-lib"}
num-traits = "0.2"
num-derive = "0.3"
wee_alloc = "0.4.5"

[profile.release]
lto = true
